Update announcement and programs

--- a/src/components/about/about-explore/AboutExplore.css
+++ b/src/components/about/about-explore/AboutExplore.css
@@ -1,6 +1,6 @@
 .explore-next {
-    height: 413px;
-    border-radius: 0 450px 0 0;
+    height: 29.085vw;
+    border-radius: 0 31.690vw 0 0;
     background-color: rgba(10, 80, 95, .3);
     display: flex;
     flex-direction: row;
@@ -9,7 +9,7 @@
 }
 
 .explore-box {
-    width: 1307px;
+    width: 92.042vw;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -17,11 +17,11 @@
 }
 
 .explore-next img {
-    height: 299px;
-    width: 535px;
+    height: 21.056vw;
+    width: 37.68vw;
     object-fit: cover;
     background-color: #5A7634;
-    transition: 0.3s;
+    /* transition: 0.3s; */
 }
 
 .bg-cont {
@@ -30,124 +30,37 @@
     justify-content: center;
 }
 .explore-next .bg-img{
+    margin-right: 37.68vw;
+    margin-top: -10.56vw;
+    height: 21.056vw;
+    width: 37.68vw;
     position: absolute;
-    margin-right: 535px;
     z-index: -1;
-    margin-top: -150px;
-    height: 299px;
-    width: 535px;
     background-color: #5A7634;
 }
 
 .explore-next img:hover {
-    margin-right: 9px;
-    margin-bottom: 15px;
+    margin-right: 0.63vw;
+    margin-bottom: 1.05vw;
 }
 
 .navi-title {
     color: white;
-    font-size: 31px;
-    margin-left: 94px;
+    font-size: 2.18vw;
+    margin-left: 6.62vw;
 }
 
 .next-icon {
-    font-size: 50px;
-    margin-bottom: -15px;
+    font-size: 3.52vw;
+    margin-bottom: -1.056vw;
 }
 
 .explore-next-content {
     line-height: 1.4;
-    width: 678px;
-    margin-left: 94px;
-    margin-top: 28px;
+    width: 47.75vw;
+    margin-left: 6.62vw;
+    margin-top: 1.97vw;
 }
 
-@media (min-width: 1366px) {
-    .explore-next {
-       
-        height: 323px;
-        border-radius: 0 352px 0 0;
-    }
-    
-    .explore-box {
-        width: 1021px;
-    }
-    
-    .explore-next img {
-        height: 234px;
-        width: 418px;
-    }
-    
-    .explore-next .bg-img{
-        margin-right: 418px;
-        margin-top: -117px;
-        height: 234px;
-        width: 418px;
-    }
-    
-    .explore-next img:hover {
-        margin-right: 7px;
-        margin-bottom: 12px;
-    }
-    
-    .navi-title {
-        font-size: 24px;
-        margin-left: 73px;
-    }
-    
-    .next-icon {
-        font-size: 39px;
-        margin-bottom: -12px;
-    }
-    
-    .explore-next-content {
-        width: 530px;
-        margin-left: 73px;
-        margin-top: 22px;
-    }
-}
 
-@media (min-width: 1920px) {
-    .explore-next {
-        height: 413px;
-        border-radius: 0 450px 0 0;
-    }
-    
-    .explore-box {
-        width: 1307px;
-    }
-    
-    .explore-next img {
-        height: 299px;
-        width: 535px;
-    }
 
-    .explore-next .bg-img{
-        margin-right: 535px;
-        margin-top: -150px;
-        height: 299px;
-        width: 535px;
-    }
-    
-    .explore-next img:hover {
-        margin-right: 9px;
-        margin-bottom: 15px;
-    }
-    
-    .navi-title {
-        font-size: 31px;
-        margin-left: 94px;
-    }
-    
-    .next-icon {
-        font-size: 50px;
-        margin-bottom: -15px;
-    }
-    
-    .explore-next-content {
-        width: 678px;
-        margin-left: 94px;
-        margin-top: 28px;
-    }
-
-}
