--- a/src/components/about/about-search/AboutSearch.css
+++ b/src/components/about/about-search/AboutSearch.css
@@ -2,9 +2,9 @@
     width: 12.664vw !important;
     height: 2.196vw;
     border-radius: 1.317vw;
-    right: 7.320vw;
-    margin-top: 1.683vw;
-    border: 1px solid rgba(255,255,255,0.502);
+    right: 6vw;
+    margin-top: 2.6vw;
+    border: 0.068vw solid rgba(255,255,255,0.502);
     background-color: rgba(255,255,255,0.2);
     display: flex;
     flex-direction: row;
