--- a/src/components/programs/programs-banner/ProgramsBanner.css
+++ b/src/components/programs/programs-banner/ProgramsBanner.css
@@ -1,18 +1,20 @@
 .programs-banner {
-    height: 575px;
     width: 100%;
     background-image: url(../../../assets/Photos/programs//01-banner-photo.png);
-    background-repeat: no-repeat;
+    height: 31.83vw;
+    background-position: 30% 30%;
+    border-radius: 0 0 34.72vw 0;
+    opacity: 0.9;
     background-size: cover;
-    background-position: 80% 80%;
-    border-radius: 0 0 500px 0;
+    background-repeat: no-repeat;
 }
 
+
 .programs-logos{
-    padding-top: 166px;
-    margin-left: 102px;
-    height: 90px;
-    width: 90px;
+    padding-top: 9.155vw;
+    margin-left: 5.63vw;
+    height: 4.412vw;
+    width: 4.437vw;
     display: flex;
 }
 
@@ -22,84 +24,23 @@
 }
 
 .programs-logos img:nth-child(n+2){
-    margin-left: 7px;
+    margin-left: 0.35vw;
 }
 
 .programs-title{
-    font-size: 49px;
+    font-size: 2.68vw;
+    margin-left: 5.63vw;
+    margin-top: 0.563vw;
     text-transform: uppercase;
-    margin-left: 102px;
-    margin-top: 20px;
 }
 
 .programs-bannerText {
-    margin-top: 10px;
-    width: 980px;
-    margin-left: 102px;
+    margin-top: 0.563vw;
+    width: 47.04vw;
+    margin-left: 5.63vw;
     line-height: 1.45;
-    text-shadow: 10px 10px 10px #00000029;
+    text-shadow:  0.704vw  0.704vw  0.704vw #00000029;
     font-weight: 100;
-    letter-spacing: 0.7px;
+    letter-spacing: 0.05vw;
     font-style: oblique;
-}
-
-@media  (min-width: 1366px){
-    .programs-banner {
-        height: 449px;
-        border-radius: 0 0 361px 0;
-    }
-    
-    .programs-logos{
-        padding-top: 130px;
-        margin-left: 80px;
-        height: 62.5px;
-        width: 63px;
-    }
-    
-    .programs-logos img:nth-child(n+2){
-        margin-left: 5px;
-    }
-    
-    .programs-title{
-        font-size: 38px;
-        margin-left: 80px;
-        margin-top: 8px;
-    }
-    
-    .programs-bannerText {
-        margin-top: 8px;
-        width: 668px;
-        margin-left: 80px;
-    }
-}
-
-@media (min-width: 1920px) {
-    .programs-banner {
-        height: 575px;
-        border-radius: 0 0 500px 0;
-    }
-    
-    .programs-logos{
-        margin-left: 102px;
-        height: 90px;
-        width: 90px;
-    }
-    
-    .programs-logos img:nth-child(n+2){
-        margin-left: 7px;
-    }
-    
-    .programs-title{
-        font-size: 49px;
-        margin-left: 102px;
-        margin-top: 20px;
-    }
-    
-    .programs-bannerText {
-        margin-top: 10px;
-        width: 980px;
-        margin-left: 102px;
-        font-size: 19px;
-        font-weight: 100;
-    }
 }
