--- a/src/components/about/about-explore/AboutExplore.css
+++ b/src/components/about/about-explore/AboutExplore.css
@@ -51,8 +51,9 @@
 }
 
 .next-icon {
-    font-size: 3.52vw;
-    margin-bottom: -1.056vw;
+   font-size: 2.8vw;
+   position: relative;
+   top: -0.07vw;
 }
 
 .explore-next-content {
