--- a/src/components/fleet/fleet-subpage/fleet-banner2/FleetBanner2.css
+++ b/src/components/fleet/fleet-subpage/fleet-banner2/FleetBanner2.css
@@ -1,71 +1,41 @@
+
+
 .fleetBanner-container{
-    height: 912px;
+    height: 648.85px;
     background-image: url('../../../../assets/Photos/03-home-backdrop-ocean.png');
     background-size: cover;
     background-repeat: no-repeat;
     transform: matrix(-1, 0, 0, -1, 0, 0);
     opacity: 0.7;
+  
 }
 
 .fleet .logos {
     position: absolute;
     top: 0;
-    left: -25px;
+    left: -0.70vw;
 }
 
 .fleet .fleet-title{
-    font-size: 49px;
+    font-size: 2.45vw;
     text-transform: uppercase;
 }
 
 .fleet .title-search {
     position: absolute;
-    top: 100px;
-    right: 50px;
+    top: 5vw;
+    right: 5.62vw;
 }
 
 .fleet .search-fleet{
     position: relative;
-    margin-top: -20px;
+    margin-top: -1px;
 }
 
 .fleet .search-bar {
     position: absolute;
-    top: 100px;
+    top: 5vw;
     display: flex;
     justify-content: flex-end;
     align-items: center;
-}
-
-
-@media (min-width: 768px) and (max-width: 1364px){
-    .fleetBanner-container{
-        height: 550px;
-    }
-    .logos{
-        width: 50px;
-        height: 50px;
-    }
-}
-
-@media (min-width: 1365px) {
-    .fleetBanner-container{
-        height: 712px;
-    }
-    
-    .fleet .logos {
-        left: -19px;
-    }
-    
-}
-
-@media (min-width: 1920px) {
-    .fleetBanner-container{
-        height: 912px;
-    }
-    
-    .fleet .logos {
-        left: -25px;
-    }
-    
 }
