--- a/src/components/gallery/gallery-carousel/GalleryCarousel.css
+++ b/src/components/gallery/gallery-carousel/GalleryCarousel.css
@@ -9,26 +9,26 @@
 }
 
 .gallery-content-1 {
-    height: 344px;
-    width: 1600px;
+    height: 23.33vw;
+    width: 90.5vw;
     background-color: #FFFFFF1A;
-    border-radius: 5px;
+    border-radius: 0.35vw;
     display: flex;
     position: relative;
-    margin-top: 80px;
+    margin-top: 5.57vw;
 }
 
 .gallery-content-1:nth-child(1){
-  margin-top: 150px;
+  margin-top: 10.05vw;
 }
 
 .gallery-content-1:nth-child(3){
-  margin-bottom: 100px;
+  margin-bottom: 6.96vw;
 }
 
 .carousel-gallery img {
-    height: 251px;
-    width: 446px;
+    height: 17.48vw;
+    width: 31.06vw;
     object-fit: cover;
     -webkit-user-drag: none;
     -khtml-user-drag: none;
@@ -38,18 +38,19 @@
 }
 
 .title-green-1{
-    height: 35px;
+    height: 2.09vw;
     position: absolute;
-    top: -20px;
-    border-radius: 20px 20px 0 20px;
+    top: -1.39vw;
+    border-radius: 1.39vw 1.39vw 0 1.39vw;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     color: white;
-    font-size: 17px;
+    font-size: 0.98vw;
     background-color: #5A7634;
-    letter-spacing: 1px;  
+    letter-spacing: 0.07vw; 
+  
 }
 
 .gallery-content-1:nth-child(1) .title-green-1{
@@ -68,29 +69,29 @@
 }
 
 .title-green-2{
-    height: 35px;
+    height: 2.44vw;
     width: 19%;
     position: absolute;
-    top: 20px;
+    top: 0.70vw;
     left:86%;
-    border-radius: 20px 20px 0 20px;
+    border-radius: 1.39vw 1.39vw 0 1.39vw;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     color: white;
-    font-size: 17px;
-    letter-spacing: 1px;  
+    font-size: 0.98vw;
+    letter-spacing: 0.07vw;
 }
 
 .carousel-card-1 {
-    height: 286px;
-    width: 1700px;
-    margin-bottom: 125px;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-top: 45px;
-    border-radius: 5px;
+    height: 19.81vw;
+    width: 118.37vw;
+    margin-bottom: 8.66vw;
+    margin-left: 1.39vw;
+    margin-right: 1.39vw;
+    margin-top: 2.44vw;
+    border-radius: 0.35vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -98,9 +99,9 @@
 }
 
 .carousel-card-1 img {
-    height: 251px;
-    border-radius: 5px;
-    width: 445px;
+    height: 17.48vw;
+    border-radius: 0.35vw;
+    width: 24.28vw;;
     object-fit: cover;
     -webkit-user-drag: none;
     -khtml-user-drag: none;
@@ -111,19 +112,19 @@
 
 .image-1 {
     position: relative;
-    width: 100%;
+    width: 24vw !important;
   }
   
   .image__img-1 {
     display: block;
-    width: 100%;
+    width: 24vw;
   }
   
   .image__overlay-1 {
     position: absolute;
     top: 0;
     left: 0;
-    width: 480px;
+    width: 27.86vw;
     height: 100%;
     background: rgba(0, 0, 0, 0.2);
     color: #ffffff;
@@ -137,8 +138,8 @@
   }
 
   .image__overlay-1 .image__title-1{
-    left: 10px;
-    top: -10px;
+    left: 0.7vw;
+    top: -0.7vw;
     position: relative;
   }
     
@@ -156,10 +157,10 @@
   }
   
   .image__title-1 {
-    padding: 10px;
-    font-size: 17px;
+    padding: 0.7vw;
+    font-size: 1vw;
   }
 
   .slider{
-    margin-top: 250px;
+    margin-top: 17.32vw;
   }
