--- a/src/components/home/homeContent/search/Search.css
+++ b/src/components/home/homeContent/search/Search.css
@@ -3,7 +3,7 @@
     height: 2.342vw;
     border-radius: 1.683vw;
     margin-top: 1.683vw;
-    border: 1px solid rgba(255,255,255,0.502);
+    border: 0.002vw solid rgba(255,255,255,0.502);
     background-color: rgba(255,255,255,0.2);
     display: flex;
     flex-direction: row;
