--- a/src/components/fleet/fleet-subpage/fleet-banner2/FleetBanner2.css
+++ b/src/components/fleet/fleet-subpage/fleet-banner2/FleetBanner2.css
@@ -37,7 +37,7 @@
     align-items: center;
 }
 
-
+/* 
 @media (min-width: 768px) and (max-width: 1364px){
     .fleetBanner-container{
         height: 550px;
@@ -68,4 +68,4 @@
         left: -25px;
     }
     
-}
+} */
