--- a/src/components/fleet/fleet-subpage/fleet-content2/FleetContent2.css
+++ b/src/components/fleet/fleet-subpage/fleet-content2/FleetContent2.css
@@ -354,7 +354,7 @@
     height: 100vh;
     margin-bottom: 126px;
 }
-
+/* 
 @media (min-width: 1600px) and (max-width: 1919px){
     .fleet-content3 {
         height: 650px;
@@ -713,7 +713,7 @@
     .circle-4{
         top: 167px;
     }   
-}
+} */
 /*
 @media (min-width: 1366px) {
     .fleet-content3 {
