--- a/src/components/fleet/fleet-banner/FleetBanner.css
+++ b/src/components/fleet/fleet-banner/FleetBanner.css
@@ -1,5 +1,5 @@
 .fleetBanner-container{
-    height: 912px;
+    height: 52.12vw !important;
     background-image: url('../../../assets/Photos/03-home-backdrop-ocean.png');
     background-size: cover;
     background-repeat: no-repeat;
@@ -9,76 +9,31 @@
 
 .fleet .logos {
     position: absolute;
-    top: 0;
-    left: -25px;
+    top: 0 !important;
+    left: -1.39vw !important;
 }
 
 .fleet .fleet-title{
-    font-size: 49px;
+    font-size: 2.78vw !important;
     text-transform: uppercase;
 }
 
 .fleet .title-search {
     position: absolute;
-    top: 100px;
-    right: 50px;
+    top: 5.71vw !important;
+    right: 2.86vw !important;
 }
 
 .fleet .search-fleet{
     position: relative;
-    margin-top: -20px;
+    margin-top: -1.17vw !important;
 }
 
 .fleet .search-bar {
     position: absolute;
-    top: 100px;
+    top: 7.32vw !important;
     display: flex;
     justify-content: flex-end;
     align-items: center;
 }
 
-@media (min-width: 1366px) {
-    .fleetBanner-container{
-        height: 712px;
-    }
-    
-    .fleet .logos {
-        left: -19px;
-    }
-    
-    .fleet .fleet-title{
-        font-size: 38px;
-    }
-    
-    .fleet .title-search {
-        top: 78px;
-        right: 39px;
-    }
-    
-    .fleet .search-fleet{
-        margin-top: -16px;
-    }
-}
-
-@media (min-width: 1920px) {
-    .fleetBanner-container{
-        height: 912px;
-    }
-    
-    .fleet .logos {
-        left: -25px;
-    }
-    
-    .fleet .fleet-title{
-        font-size: 49px;
-    }
-    
-    .fleet .title-search {
-        top: 100px;
-        right: 50px;
-    }
-    
-    .fleet .search-fleet{
-        margin-top: -20px;
-    }
-}
