--- a/src/components/fleet/fleet-content/FleetContent.css
+++ b/src/components/fleet/fleet-content/FleetContent.css
@@ -1,22 +1,22 @@
 .fleet-content {
-    height: 443px;
+    height: 23.060vw;
+    top: 13.616vw;
     position: absolute;
-    top: 261px;
     width: 100%;
     display: flex;
     justify-content: center;
 }
 .fleet-container{
     border-radius: 50%;
-    border: 2px solid #FFFFFF;
+    border: 0.102vw solid #FFFFFF;
     overflow: hidden;
-    margin: 0px 25px;
+    margin: 0px 1.317vw;
     
 }
 .fleet-content2 {
-    height: 443px;
+    height: 23.060vw;
     position: absolute;
-    top: 1083px;
+    top: 56.368vw;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -24,6 +24,7 @@
 
 .fleet-img {
     height: 100%;
+    width: 23.060vw;
     position: relative;
     text-align: center;
     color: white;
@@ -36,7 +37,7 @@
     position: absolute;
     top: 0;
     height: 100%;
-    width: 443px;
+    width: 23.060vw;
     background-color: rgba(255, 255, 255, 0.051);
     z-index: 999;
 }
@@ -60,7 +61,7 @@
     letter-spacing: 1.2px;
     font-family: 'Avenir Book';
     color: #f8f8ff;
-    font-size: 14px;
+    font-size: 0.732vw;
     font-weight: 100;
   }
   
@@ -78,12 +79,12 @@
 }
 
 .fleet-img img:nth-child(2) {
-    height: 207px;
-    width: 437px;
+    height: 10.761vw;
+    width: 22.767vw;
     position: absolute;
     object-fit: cover;
     left: 0;
-    top: 128px;
+    top: 6.661vw;
     /* transition: transform .5s ease; */
 }
 
@@ -93,97 +94,97 @@
 
 .top-stroke {
     position: absolute;
-    height: 13px;
+    height: 0.658vw;
     top: 0;
     left: 50%;
     background-color: white;
     width: 0;
-    border: 1px solid white;
+    border: 0.0732vw solid white;
 }
 
 .top-left-stroke {
     position: absolute;
-    height: 13px;
-    left: 65px;
-    top: 65px;
+    height: 0.658vw;
+    left: 3.367vw;
+    top: 3.367vw;
     background-color: white;
     width: 0;
-    border: 1px solid white;
+    border: 0.0732vw solid white;
     transform: rotate(-225deg);
 }
 
 .top-right-stroke {
     position: absolute;
-    height: 13px;
-    right: 65px;
-    top: 65px;
+    height: 0.658vw;
+    right: 3.367vw;
+    top: 3.367vw;
     background-color: white;
     width: 0;
-    border: 1px solid white;
+    border: 0.0732vw solid white;
     transform: rotate(-135deg);
 }
 
 .bottom-left-stroke {
     position: absolute;
-    height: 13px;
-    left: 65px;
-    bottom: 65px;
+    height: 0.658vw;
+    left: 3.367vw;
+    bottom: 3.367vw;
     background-color: white;
     width: 0;
-    border: 1px solid white;
+    border: 0.0732vw solid white;
     transform: rotate(-135deg);
 }
 
 .bottom-right-stroke {
     position: absolute;
-    height: 13px;
-    right: 65px;
-    bottom: 65px;
+    height: 0.658vw;
+    right: 3.367vw;
+    bottom: 3.367vw;
     background-color: white;
     width: 0;
-    border: 1px solid white;
+    border: 0.0732vw solid white;
     transform: rotate(-225deg);
 }
 
 .bottom-stroke {
     position: absolute;
-    height: 13px;
+    height: 0.658vw;
     left: 50%;
     bottom: 0;
     background-color: white;
     width: 0;
-    border: 1px solid white;
+    border: 0.0732vw solid white;
 }
 
 .left-stroke {
     position: absolute;
-    height: 13px;
+    height: 0.658vw;
     top: 50%;
-    left: 6px;
+    left: 0.292vw;
     background-color: white;
     width: 0;
-    border: 1px solid white;
+    border: 0.0732vw solid white;
     transform: rotate(90deg);
 }
 
 .right-stroke {
     position: absolute;
-    height: 13px;
+    height: 0.658vw;
     top: 50%;
-    right: 6px;
+    right: 0.292vw;
     background-color: white;
     width: 0;
-    border: 1px solid white;
+    border: 0.0732vw solid white;
     transform: rotate(90deg);
 }
 
 .fleet-img:nth-child(n+2) {
-    margin-left: 56px;
+    margin-left: 2.928vw;
 }
 
 .fleet-card {
     position: absolute;
-    top: 746px;
+    top: 38.872vw;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -191,14 +192,14 @@
 
 .fleet-card2 {
     position: absolute;
-    top: 1568px;
+    top: 81.698vw;
     width: 100%;
     display: flex;
     justify-content: center;
 }
 
 .fleet-context {
-    width: 443px;
+    width: 23.060vw;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -208,204 +209,72 @@
 }
 
 .fleet-context:nth-child(n+2) {
-    margin-left: 56px;
+    margin-left: 2.928vw;
 }
 
 .second-p {
-    margin-top: 32px;
-    margin-left: 18px;
+    margin-top: 1.683vw;
+    margin-left: 0.951vw;
     line-height: 1.4;
 }
 
 .second-p p:nth-child(2) {
-    margin-top: 6px;
+    margin-top: 0.292vw;
 }
 
 .blue-line {
     position: absolute;
-    left: 90px;
-    top: 12px;
-    height: 209px;
+    left: 4.685vw;
+    top: 0.658vw;
+    height: 10.907vw;
     background-color: #0A505F;
-    width: 1px;
+    width: 0.073vw;
 }
 
 .circle-top{
     position: absolute;
-    left: -4px;
-    top: -5px;
-    height: 9px;
-    width: 9px;
+    left: -0.219vw;
+    top: -0.292vw;
+    height: 0.439vw;
+    width: 0.439vw;
     border-radius: 50%;
     background-color: #0A505F;
 }
 
 .circle-mid{
     position: absolute;
-    left: -4px;
-    top: 65px;
-    height: 9px;
-    width: 9px;
+    left: -0.219vw;
+    top: 3.367vw;
+    height: 0.439vw;
+    width: 0.439vw;
     border-radius: 50%;
     background-color: #0A505F;
 }
 
 .circle-bottom{
     position: absolute;
-    left: -4px;
-    bottom: -5px;
-    height: 9px;
-    width: 9px;
+    left: -0.219vw;
+    bottom: -0.292vw;
+    height: 0.439vw;
+    width: 0.439vw;
     border-radius: 50%;
     background-color: #0A505F;
 }
 
 .fleetHeight {
     height: 100vh;
-    margin-bottom: 126px;
+    margin-bottom: 6.588vw;
 }
 
-@media (min-width: 1366px) {
+/* @media (min-width: 1920px) {
     .fleet-content {
-        height: 346px;
-        top: 204px;
+        
     }
     
     .fleet-content2 {
-        height: 346px;
-        top: 846px;
     }
     
     .fleet-img {
-        width: 346px;
-    }
-    
-    .overlay{
-        width: 346px;
-    }
-    
-    .fleet-img img:nth-child(2) {
-        height: 162px;
-        width: 341px;
-        top: 100px;
-    }
-    
-    .top-stroke {
-        height: 9px;
-    }
-    
-    .top-left-stroke {
-        height: 9px;
-        left: 51px;
-        top: 51px;
-    }
-    
-    .top-right-stroke {
-        height: 10px;
-        right: 51px;
-        top: 51px;
-    }
-    
-    .bottom-left-stroke {
-        height: 9px;
-        left: 51px;
-        bottom: 51px;
-    }
-    
-    .bottom-right-stroke {
-        height: 9px;
-        right: 51px;
-        bottom: 51px;
-    }
-    
-    .bottom-stroke {
-        height: 9px;
-    }
-    
-    .left-stroke {
-        height: 9px;
-        left: 5px;
-    }
-    
-    .right-stroke {
-        height: 9px;
-        right: 5px;
-    }
-    
-    .fleet-img:nth-child(n+2) {
-        margin-left: 44px;
-    }
-    
-    .fleet-card {
-        top: 583px;
-    }
-    
-    .fleet-card2 {
-        top: 1225px;
-    }
-    
-    .fleet-context {
-        width: 346px;
-    }
-    
-    .fleet-context:nth-child(n+2) {
-        margin-left: 44px;
-    }
-    
-    .second-p {
-        margin-top: 25px;
-        margin-left: 14px;
-    }
-    
-    .second-p p:nth-child(2) {
-        margin-top: 5px;
-    }
-    
-    .blue-line {
-        left: 79px;
-        top: 9px;
-        height: 163px;
-    }
-    
-    .circle-top{
-        left: -3px;
-        top: -4px;
-        height: 6px;
-        width: 6px;
-    }
-    
-    .circle-mid{
-        left: -3px;
-        top: 53px;
-        height: 6px;
-        width: 6px;
-    }
-    
-    .circle-bottom{
-        left: -3px;
-        bottom: -3px;
-        height: 6px;
-        width: 6px;
-    }
-    .explore-marg {
-        height: 80vh;
-        margin-bottom: 150px;
-    }
-}
-
-@media (min-width: 1920px) {
-    .fleet-content {
-        height: 443px;
-        top: 261px;
-    }
-    
-    .fleet-content2 {
-        height: 443px;
-        top: 1083px;
-    }
-    
-    .fleet-img {
-        width: 443px;
     }
     
     .overlay{
@@ -520,153 +389,5 @@
         height: 80vh;
         margin-bottom: 250px;
     }
-}
+} */
 
-@media (min-width: 768px) and (max-width: 1360px){
-    .fleet-content {
-        height: 300px;
-        top: 250px;
-    }
-    .fleet-container{
-    border-radius: 50%;
-    border: 2px solid #FFFFFF;
-    overflow: hidden;
-    margin: 0px 40px;
-    width: 300px; 
-}
-    .fleet-content2 {
-        height: 300px;
-        top: 846px;
-    }
-    .fleet-img {
-        width: 300px;
-    }
-    
-    .overlay{
-        width: 300px;
-    }
-    
-    .fleet-img img:nth-child(2) {
-        height: 100px;
-        width: 300px;
-        top: 100px;
-    }
-    
-    .top-stroke {
-        height: 8px;
-    }
-    
-    .top-left-stroke {
-        height: 8px;
-        left: 44px;
-        top: 44px;
-    }
-    
-    .top-right-stroke {
-        height: 8px;
-        right: 44px;
-        top: 44px;
-    }
-    
-    .bottom-left-stroke {
-        height: 8px;
-        left: 44px;
-        bottom: 44px;
-    }
-    
-    .bottom-right-stroke {
-        height: 8px;
-        right: 44px;
-        bottom: 44px;
-    }
-    
-    .bottom-stroke {
-        height: 8px;
-    }
-    
-    .left-stroke {
-        height: 9px;
-        left: 5px;
-    }
-    
-    .right-stroke {
-        height: 9px;
-        right: 5px;
-    }
-    
-    .fleet-img:nth-child(n+2) {
-        margin-left: 44px;
-    }
-    
-    .fleet-card {
-        top: 583px;
-    }
-    
-    .fleet-card2 {
-        top: 1180px;
-    }
-    
-    .fleet-context {
-        width: 346px;
-    }
-    
-    .fleet-context:nth-child(n+2) {
-        margin-left: 20px;
-    }
-    
-    .second-p {
-        margin-top: 25px;
-        margin-left: 10px;
-    }
-    
-    .second-p p:nth-child(2) {
-        margin-top: 5px;
-    }
-    
-    .blue-line {
-        left: 79px;
-        top: 9px;
-        height: 163px;
-    }
-    
-    .circle-top{
-        left: -3px;
-        top: -4px;
-        height: 6px;
-        width: 6px;
-    }
-    
-    .circle-mid{
-        left: -3px;
-        top: 53px;
-        height: 6px;
-        width: 6px;
-    }
-    
-    .circle-bottom{
-        left: -3px;
-        bottom: -3px;
-        height: 6px;
-        width: 6px;
-    }
-    .text-overlay {
-        position: absolute;
-        top: 87%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        transition: 0.3s ease;
-        opacity:0;
-        font-family: 'Avenir Book';
-        font-size: 11px;
-      
-      }
-      
-      .fleet-img:hover .text-overlay {
-        opacity: 1;
-        
-      }
-
-      .fleet-context p{
-          font-size: 14px;
-      }
-}
